farcaster frames added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src 'self' data:; script-src-elem 'self' 'unsafe-inline';">
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#000000" />
+    
+    <!-- Farcaster Frame v2 Meta Tags -->
+    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://bicepblaster.orbiter.website/logo512.png","button":{"title":"Start Workout","action":{"type":"launch_frame","name":"Bicep Blaster","url":"https://bicepblaster.orbiter.website","splashImageUrl":"https://bicepblaster.orbiter.website/logo512.png","splashBackgroundColor":"#000000"}}}' />
+    <meta name="fc:frame:image" content="https://bicepblaster.orbiter.website/logo512.png" />
+    <meta name="fc:frame:button:1" content="Start Workout" />
+    <meta name="fc:frame:post_url" content="https://bicepblaster.orbiter.website" />
+    
     <title>Bicep Blaster Workout</title>
   </head>
   <body>
